basic SignUp and Login work

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static  %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,21 +14,21 @@
 
   <!-- Favicons -->
   <link href="static/assets/img/favicon.png" rel="icon">
-  <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="static /assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="{% static '/assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static '/assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+  <link href="{% static '/assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+  <link href="{% static '/assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
+  <link href="{% static '/assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
+  <link href="{% static '/assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="static/assets/css/style.css" rel="stylesheet">
+  <link href="{% static '/assets/css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
 
       {% comment %} <h1 class="logo"><a href="index.html">Tempo</a></h1> {% endcomment %}
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="static/assets/img/logo_white.png" alt="" class="img-fluid"></a>
+      <a href="/" class="logo"><img src="{% static '/assets/img/logo_white.png' %}" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -50,9 +50,9 @@
           <li><a class="nav-link scrollto" href="/about">My Profile</a></li>
           <li class="dropdown"><a href="#"><span>Sign In</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Sign Up</a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#">Logout</a></li>
+              <li><a href="/auth/signup/">Sign Up</a></li>
+              <li><a href="/auth/login/">Login</a></li>
+              <li><a href="/auth/logout/">Log out</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto bg-danger p-3" href="/cart">Cart</a></li>
@@ -67,11 +67,15 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h3>Welcome to <strong>Virtual Bazaar</strong></h3>
+      {% comment %} <h3>Welcome to <strong>Virtual Bazaar</strong></h3>
       <h1>We're Selling Products</h1>
       <h2>We are team of talented designers making websites with Bootstrap</h2>
       <a href="" class="btn-get-started scrollto">Shop Now</a>
-    </div>
+    </div> {% endcomment %}
+    {% block content %}
+      
+      
+    {% endblock content %}
   </section><!-- End Hero -->
 
   <main id="main">
@@ -161,14 +165,14 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="static/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="static/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="static/assets/vendor/php-email-form/validate.js"></script>
+  <script src="{% static '/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static '/assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
+  <script src="{% static '/assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+  <script src="{% static '/assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
+  <script src="{% static '/assets/vendor/php-email-form/validate.js' %}"></script>
 
   <!-- Template Main JS File -->
-  <script src="static/assets/js/main.js"></script>
+  <script src="{% static '/assets/js/main.js' %}"></script>
 
 </body>
 
