updated login and signup

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,15 @@
 {% extends 'base.html' %}
-{% if messages %}
-    <div class="alert alert-primary" role="alert">
-      {% for message in messages %}
-      {{ message }}
-      {% endfor %}
-    </div>
-{% endif %}
-
 {% block title %}Home{% endblock title %}
-
 {% block content %}
-{% csrf_token %}
-  <div class="card bg-light mt-5 p-4">
-    <h1 class="text-dark-emphasis">Signup</h1>
-    <form action='/auth/signup/' method="post">
-      {% csrf_token %}
-      <label for='fullname'>Full Name</label>
-      <div class="form-control">
-        <input type="text" class="form-control-lg" id="fullname" name="fullname" required>
-      </div>
-      <label for='email'>Email</label>
-      <div class="form-control">
-        <input type="email" class="form-control-lg" id="email" name="email" required>
-      </div>
-      <label for='pass1'>Password</label>
-      <div class="form-control">
-        <input type="password" class="form-control-lg" id="pass1" name="pass1" required>
-      </div>
-      <label for='pass2'>Confirm Password</label>
-      <div class="form-control">
-        <input type="password" class="form-control-lg" id="pass2" name="pass2" required>
-      </div>
-      <button type="submit" class="btn btn-outline-dark mt-2 mb-2">Sign In</button>
-
-    <br>
-    Already User? <a href="/auth/login/">Login</a>
-    <br>
-    </form>
-  </div>
+  <!-- ======= Hero Section ======= -->
+<section id="hero">
+  <div class="hero-container">
+    <h3>Welcome to <strong>Virtual Bazaar</strong></h3>
+    <h1>We're Selling Products</h1>
+    <a href="" class="btn-get-started scrollto">Shop Now</a>
+  </div> 
+</section>
+<!-- End Hero -->
 {% endblock content %}
 
 
