--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,14 +1,3 @@
-/**
-* Template Name: Tempo
-* Updated: May 30 2023 with Bootstrap v5.3.0
-* Template URL: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -361,14 +350,14 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../../images/bg-img1.jpg") top center;
   background-size: cover;
   position: relative;
 }
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(20, 20, 20, 0.6);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -391,7 +380,7 @@ h6 {
 }
 
 #hero h3 {
-  background: rgba(255, 255, 255, 0.1);
+  background:  #e43c5c;
   color: #fff;
   font-size: 26px;
   padding: 10px 30px;
