--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,1 +1,43 @@
 {% extends 'base.html' %}
+
+{% block title %}Signup{% endblock title %}
+
+{% block content %}
+{% csrf_token %}
+  <div class="card bg-light mt-5 p-4">
+    {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        {% endfor %}
+      </div>
+    {% endif %}
+
+    <h1 class="text-dark-emphasis">Signup</h1>
+    <form action='/auth/signup/' method="post">
+      {% csrf_token %}
+      <label for='fullname'>Full Name</label>
+      <div class="form-control">
+        <input type="text" class="form-control-lg" id="fullname" name="fullname" required>
+      </div>
+      <label for='email'>Email</label>
+      <div class="form-control">
+        <input type="email" class="form-control-lg" id="email" name="email" required>
+      </div>
+      <label for='pass1'>Password</label>
+      <div class="form-control">
+        <input type="password" class="form-control-lg" id="pass1" name="pass1" required>
+      </div>
+      <label for='pass2'>Confirm Password</label>
+      <div class="form-control">
+        <input type="password" class="form-control-lg" id="pass2" name="pass2" required>
+      </div>
+      <button type="submit" class="btn btn-outline-danger mt-2 mb-2">Sign In</button>
+
+    <br>
+    Already User? <a href="/auth/login/">Login</a>
+    <br>
+    </form>
+  </div>
+{% endblock content %}
