--- a/templates/base.html
+++ b/templates/base.html
@@ -48,13 +48,19 @@
           <li><a class="nav-link scrollto" href="/about">About</a></li>
           <li><a class="nav-link scrollto" href="/about">Orders</a></li>
           <li><a class="nav-link scrollto" href="/about">My Profile</a></li>
-          <li class="dropdown"><a href="#"><span>Sign In</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="/auth/signup/">Sign Up</a></li>
-              <li><a href="/auth/login/">Login</a></li>
-              <li><a href="/auth/logout/">Log out</a></li>
-            </ul>
-          </li>
+
+          {%if request.user.is_authenticated %}
+            <li><a class="nav-link scrollto" href="/auth/logout/">Log out</a></li>
+          {% else %}
+            <li class="dropdown"><a href="#"><span>Sign In</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a href="/auth/signup/">Sign Up</a></li>
+                <li><a href="/auth/login/">Login</a></li>
+              </ul>
+            </li>
+          {%endif%}
+
+          
           <li><a class="nav-link scrollto bg-danger p-3" href="/cart">Cart</a></li>
           <li><a class="nav-link scrollto bg-dark p-3 " href="/contact">Contact</a></li>
         </ul>
@@ -73,7 +79,6 @@
       <a href="" class="btn-get-started scrollto">Shop Now</a>
     </div> {% endcomment %}
     {% block content %}
-
       
       
     {% endblock content %}
