--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,8 +1,72 @@
 {% extends 'base.html' %}
-
-{% block title %}Contact Us{% endblock title  %}
-
-
+{% block title %}Contact Us{% endblock title %} 
 {% block body %}
-    <h1>Contact Us<h1>
+<h1 class="text-center">Contact Us</h1>
+    <div class="container mt-2">
+      {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        {% endfor %}
+      </div>
+    {% endif %}
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <form action="/contact" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="name">Full Name</label>
+              <input
+                type="text"
+                class="form-control p-2"
+                id="name"
+                name="name"
+                placeholder="Full name"
+                required/>
+            </div>
+            <label for="email">Email</label>
+            <div class="form-group">
+              <input
+                type="email"
+                class="form-control p-2"
+                id="email"
+                name="email"
+                placeholder="Email"
+                value = "{{user.email}}"
+                required
+              />
+            </div>
+            <label for="desc">How Can i Help You?</label>
+            <div class="form-group">
+              <textarea
+                type="password"
+                class="form-control p-2"
+                id="desc"
+                name="desc"
+                placeholder="..."
+              ></textarea>
+            </div>
+            <label for="pnumber">Phone Number</label>
+            <div class="form-group">
+              <input
+                type="number"
+                class="form-control p-2"
+                id="pnumber"
+                name="pnumber"
+                placeholder="Phone Number"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-outline-danger mt-2 mb-2">
+              Submit
+            </button>
+            <br />
+            <br />
+          </form>
+        </div>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
 {% endblock body %}
