--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,11 @@
           <li><a class="nav-link scrollto active" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="/blog">Blog</a></li>
           <li><a class="nav-link scrollto" href="/about">About</a></li>
-          <li><a class="nav-link scrollto" href="/about">Orders</a></li>
+          <li><a class="nav-link scrollto" href="/checkout">Checkout</a></li>
           <li><a class="nav-link scrollto" href="/about">My Profile</a></li>
+          <button type="button" class="nav-link scrollto bg-danger p-3 m-2 text-white" id="popcart" 
+           data-container="body" data-toggle="popover" data-placement="bottom" title="Items Added" data-html="true">Cart (<span id="cart">0</span>)
+          </button>
 
           {%if request.user.is_authenticated %}
             <li><a class="nav-link scrollto" href="/auth/logout/">Log out</a></li>
@@ -60,8 +63,7 @@
             </li>
           {%endif%}
 
-          
-          <li><a class="nav-link scrollto bg-danger p-3" href="/cart">Cart</a></li>
+        
           <li><a class="nav-link scrollto bg-dark p-3 " href="/contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
