--- a/templates/index.html
+++ b/templates/index.html
@@ -37,12 +37,12 @@
             <div class="card-body">
               <h5 class="card-title mt-2" id="namepr{{i.id}}">{{i.product_name}}</h5>
               <p class="card-text">{{i.desc|slice:"0:25"}}...</p>
-              <h6 class="card-title">Price:<span id="pricepr{{i.id}}">{{i.price}}</span></h6>
+              <h6 class="card-title mb-3">Price:<span id="pricepr{{i.id}}">{{i.price}}</span></h6>
               <span id="divpr{{i.id}}" class="divpr">
-                <button id="pr{{i.id}}" class="btn btn-danger btn-sm mt-0">AddToCart</button>
+                <button id="pr{{i.id}}" class="btn btn-danger btn-sm mt-0 cart">AddToCart</button>
               </span>
               <a href="/media/{{i.image}}">
-                <button class="btn btn-dark btn-sm cart">View</button></a>
+                <button class="btn btn-dark btn-sm">View</button></a>
             </div>
           </div>
         {% endfor %}
@@ -52,5 +52,128 @@
   </div>
 </section>
 <!-- End Product Section -->
+
+
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script> {% endcomment %}
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+  //find pout the card from local storage
+  var cart = {};
+  if (localStorage.getItem('cart') == null) {
+    cart = {};
+    console.log(cart)
+  } else {
+    cart = JSON.parse(localStorage.getItem('cart'));
+    updateCart(cart);
+  }
+
+  //add or increment code
+  $('.divpr').on('click', 'button.cart', function() {
+    var idstr = this.id.toString();
+    console.log(idstr)
+
+    if(cart[idstr] != undefined) {
+      qty = cart[idstr][0] + 1;
+    } else {
+      qty = 1;
+      name = document.getElementById('name' + idstr).innerHTML;
+      price = document.getElementById('price' + idstr).innerHTML;
+      cart[idstr] = [qty, name, price];
+    }
+   updateCart(cart);
+
+   localStorage.setItem('cart', JSON.stringify(cart));
+   document.getElementById('cart').innerHTML =  Object.keys(cart).length;
+   console.log( Object.keys(cart).length)
+   document.getElementById("popcart").click();
+  });
+
+  //add pop over to cart
+  $('#popcart').popover();
+  
+  updatePopover(cart);
+  function updatePopover(cart) {
+    console.log("we are inside update popover");
+    var popStr = "";
+    var popStr = popStr + "<h5> cart for your items in my shopping cart </h5>" 
+    " <div class='mx-2 my-2'>";
+    var i = 1;
+    for(var item in cart) {
+      popStr = popStr + "<b>" + i + "</b>. ";
+      popStr = popStr + document.getElementById('name' + item).innerHTML.slice(0,19) + "..." + "<b>" + cart[item][0] + "</b>" + "Qty" + '<br>';
+        i = i + 1;
+    }
+
+    //popStr = popStr + "</div> <a href='/checkout' class='btn btn-success' id='clearCart'>Checkout</a>";
+    //popStr += "<a href='#' id='btnClearCart' class='btn btn-dark'>ClearCart </a>";
+    popStr = popStr + "</div> <a href='/checkout' class='btn btn-success' id='clearCart'>Checkout</a>"
+    popStr += "<a href='#' id='btnClearCart' class='btn btn-dark mx-3'>ClearCart </a>";
+    console.log(popStr);
+    document.getElementById('popcart').setAttribute('data-content', popStr);
+    $('#popcart').popover('show');
+    document.getElementById("popcart").click();
+  }
+
+
+  $('#btnClearCart').click(function(e){
+    e.preventDefault();
+    debugger;
+    console.log("clear")
+    cart = JSON.parse(localStorage.getItem('cart'));
+    for (var item in cart) {
+      document.getElementById('div' + item).innerHTML = '<button id="' + item + '" class="btn btn-success cart">Add to Card</button>'
+    }
+    localStorage.clear();
+    cart = {};
+    updateCart(cart);
+    let clear= document.getElementById("popcart").click(); 
+    document.getElementById("popcart").click();
+  })
+  
+
+  function updateCart(cart) {
+    var sum = 0;
+    for (var item in cart) {
+      sum = sum + cart[item][0];
+      document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "'class='btn btn-success minus'> - </button> <span id='val" + item + "''>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-success plus'> + </button>" ;
+    }
+    localStorage.setItem('cart', JSON.stringify(cart));
+    document.getElementById('cart').innerHTML = sum;
+    console.log(cart);
+    updatePopover(cart);
+    document.getElementById("popcart").click();
+  }
+
+  $('.divpr').on("click" , "button.minus", function() {
+    a = this.id.slice(7, );
+    cart['pr' + a][0] = cart['pr' + a][0] -1;
+    cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
+    document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+    updateCart(cart);
+  })
+
+  $('.divpr').on("click", "button.plus", function(){
+    a = this.id.slice(6, );
+    cart['pr' +a][0] = cart['pr' + a][0] + 1;
+
+    document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+    updateCart(cart);
+
+  })
+</script> 
+
+
+
+
+
+
+
+
 
 {% endblock body %}
