--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Check Out
+Checkout
 {% endblock title %}
 
 {% block content %}
@@ -42,15 +42,69 @@ Check Out
                 <ul class="list-group" id="items"></ul>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb mt-3">
-                  <li class="breadcrumb-item active" aria-current="page">Your Cart Total Is<b>Rs. <span id="totalprice"> </span><span id="amount"> </span></b>. Enter your details below & place your order. Thanks for using Virtual Bazaar</li>
+                  <li class="breadcrumb-item active" aria-current="page">Your Cart Total is<b> Rs. <span id="totalprice"> </span><span id="amount"> </span></b>Enter your details below & place your order. Thanks for using Virtual Bazaar</li>
                   </ol>
                 </nav>
             </div>
-        </div>    
+        </div> 
+        <div class="col my-4">
+          <h2>Step 2 - Enter Address & Other Details:</h2>
+          <form method="post" action="/checkout/">{% csrf_token %}
+            <input type="hidden" name="itemsJson" id="itemsJson">
+            <input type="hidden" name="amt" id="amt">
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputname">Name</label>
+                <input type="text" class="form-control " id="name" name="name" placeholder="Name" required>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputEmail">Email</label>
+                <input type="email" class="form-control " id="email" name="email" placeholder="Email" value="{{user.email}}" required>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputAddress">Address</label>
+                <input type="text" class="form-control " id="address1" name="address1" placeholder="1234 Main St" required>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputAddress">Address line 2</label>
+                <input type="text" class="form-control " id="address2" name="address2" placeholder="1234 Main St" required>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputCity">City</label>
+                <input type="text" class="form-control " id="city" name="city" placeholder="Enter City" required>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputState">State</label>
+                <input type="text" class="form-control " id="state" name="state" placeholder="Enter State" required>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputZip">Pin Code</label>
+                <input type="number" class="form-control " id="zip_code" name="zip_code" placeholder="zip_code" required>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mt-2">
+                <label for="inputNumber">Phone Number</label>
+                <input type="text" class="form-control " id="phone" name="phone" placeholder="Enter Phone Number" required>
+            </div>
+            <br>
+
+            <button id="btn" type="submit" class="btn btn-success btn-sm btn-block col-md-4">Place Order</button>
+          </form>
+        </div>   
     </div>
   </div>
   
 </section>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script>
   if(localStorage.getItem('cart') == null){
@@ -62,15 +116,15 @@ Check Out
   var sum = 0; 
   var totalPrice = 0;
   if($.isEmptyObject(cart)) {
+    console.log("ok");
     // if Object is empty
     mystr = `<p> Your cart is empty please add some items to your cart before checking-out!!</p>`
     $('#items').append(mystr); 
   } else {
-    
     for (item in cart) {
-      let name = cart[items][1];
-      let qty = cart[items][0];
-      let itemPrice = cart[items][2];
+      let name = cart[item][1];
+      let qty = cart[item][0];
+      let itemPrice = cart[item][2];
       sum = sum + qty;
       totalPrice += qty * itemPrice
 
