complete payment work

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
           <li><a class="nav-link scrollto" href="/blog">Blog</a></li>
           <li><a class="nav-link scrollto" href="/about">About</a></li>
           <li><a class="nav-link scrollto" href="/checkout">Checkout</a></li>
-          <li><a class="nav-link scrollto" href="/about">My Profile</a></li>
+          <li><a class="nav-link scrollto" href="/profile">My Profile</a></li>
           <button type="button" class="nav-link scrollto bg-danger p-3 m-2 text-white" id="popcart" 
            data-container="body" data-toggle="popover" data-placement="bottom" title="Items Added" data-html="true">Cart (<span id="cart">0</span>)
           </button>
